# dqn2048

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/dqn/: critic.rs  data_augmenter.rs  mod.rs  model.rs  replay_buffer.rs  state.rs  stats.rs  sum_tree.rs  trainer.rs  training_batch.rs
src/dqn/serialization/: deserializer.rs  mod.rs  serializer.rs  training_config.rs
src/game/: board.rs  game_rng.rs  mod.rs
src/training/: board_state.rs  game_model.rs  mod.rs  training_critic.rs  training_data_augmenter.rs  training_stats_recorder.rs  training_thread.rs  types.rs
src/ui/: mod.rs  training_overview.rs  training_state.rs  training_update_adapter.rs
ui/: app-window.slint  game-board.slint  game-widget.slint  globals.slint  size.slint  styles.slint  tile.slint
ui/2048/: game-board.slint  game-widget.slint  tile.slint
ui/training/: training-widget.slint
