[package]
name = "dqn2048"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.19.1", features = ["autodiff"] }
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "line_series", "point_series", "fontconfig-dlopen", "ttf"] }
rand = "0.9.2"
slint = "1.12.1"

[build-dependencies]
slint-build = "1.12.1"

[features]
default = ["cuda"]
rocm = ["burn/rocm"]
cuda = ["burn/cuda"]
wgpu = ["burn/wgpu"]

[profile.profiling]
inherits = "dev"
opt-level = 3
debug = true

