[package]
name = "dqn2048"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.20.0-pre.5", features = ["autodiff"] }
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "line_series", "point_series", "fontconfig-dlopen", "ttf"] }
rand = "0.9.2"
slint = "1.12.1"
num-format = { version = "0.4.4", features = ["with-system-locale"] }
rfd = "0.16.0"
serde = "1.0.228"
bincode = "1.3.3"
zstd = "0.13.3"
serde_json = "1.0.149"
csv = "1.4.0"

[build-dependencies]
slint-build = "1.12.1"

[features]
default = ["wgpu"]
rocm = ["burn/rocm"]
cuda = ["burn/cuda"]
wgpu = ["burn/wgpu"]
